Add SingleConnectionDataSource implementation for shared connection handling